--- a/TTT_TuraStatisztika_Report.Rmd
+++ b/TTT_TuraStatisztika_Report.Rmd
@@ -25,7 +25,9 @@ Az elemzésből kizártam azokat a túrákat, amelyek nem voltak gyalogosan telj
 
 [^1]: A következő tájegységek voltak a külföldiek: Ausztria, Bihar-hegység, Csehország, Erdély, Horvátország, Lengyelország, Németország, Románia, Szerbia, Szlovákia, Szlovénia, Ukrajna (Kárpátalja).
 
-Az elemzés `R` statisztikai környezet alatt készült, a vizualizáció `lattice` csomaggal, a jelentés pedig `knitr`-rel, `RMarkdown` formátumban. A kódot úgy írtam meg, hogy a lehető legáltalánosabb legyen (így például könnyen alkalmazható legyen más évekre is). A teljes forráskódot, és a reprodukálható jelentést közzétettem `Github`-on, a következő repozitóriumban: TODO.
+Az elemzés `R` statisztikai környezet alatt készült, a vizualizáció `lattice` csomaggal, a jelentés pedig `knitr`-rel, `RMarkdown` formátumban. A kódot úgy írtam meg, hogy a lehető legáltalánosabb legyen (így például könnyen alkalmazható legyen más évekre is). A teljes forráskódot, és a reprodukálható jelentést közzétettem `Github`-on, a következő repozitóriumban: https://github.com/tamas-ferenci/TTT_TuraStatisztika.
+
+A jelentés elérhető PDF formátumban a következő címen: https://github.com/tamas-ferenci/TTT_TuraStatisztika/blob/master/TTT_TuraStatisztika_Report.pdf (letölthető a jobb oldalt felül lévő Download feliratú gombbal).
 
 ```{r elokeszites1, include=FALSE}
 library( RCurl )
