Képek megőrzése (és fel is töltve github-ra).

--- a/TTT_TuraStatisztika_Report.Rmd
+++ b/TTT_TuraStatisztika_Report.Rmd
@@ -7,7 +7,7 @@ output:
     pandoc_args: ["--smart"]
   pdf_document: default
 header-includes: \usepackage{subfig}
-knit: (function(inputFile, encoding) { rmarkdown::render(inputFile, encoding = encoding, output_format = "all" ) })
+knit: (function(inputFile, encoding) { rmarkdown::render(inputFile, encoding = encoding, output_format = "all", clean = FALSE ) })
 ---
 
 ```{r setup, include=FALSE}
